exploration 8. movielens recommendation

--- a/[E-08]Movielens_recommendation.ipynb
+++ b/[E-08]Movielens_recommendation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "unlikely-diamond",
+   "id": "approved-basin",
    "metadata": {},
    "source": [
     "# [Exploration 08] Movielens 영화 추천 \n",
@@ -19,12 +19,13 @@
     "- MF모델 사용\n",
     "\n",
     "## 프로젝트 목표\n",
-    "- MF matrix"
+    "- MF모델, AlternatingLeastSquares모델에 대해 이해하기\n",
+    "- 아이템, 유저/유사도, 기여도에 대해 이해하기"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "completed-laptop",
+   "id": "democratic-kernel",
    "metadata": {},
    "source": [
     "## 01. load and preprocess data\n",
@@ -34,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "related-volunteer",
+   "id": "piano-charm",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "meaning-convert",
+   "id": "therapeutic-transmission",
    "metadata": {},
    "source": [
     "**메타 데이터('movies.dat')으로 영화 제목을 확인합니다.**"
@@ -147,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fundamental-liabilities",
+   "id": "facial-utility",
    "metadata": {
     "scrolled": true
    },
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "criminal-wallace",
+   "id": "capital-corrections",
    "metadata": {},
    "source": [
     "**ratings, movies의 데이터 갯수가 같은지 확인합니다.**"
@@ -253,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "facial-guess",
+   "id": "extensive-oxide",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "derived-large",
+   "id": "valuable-kenya",
    "metadata": {},
    "source": [
     "- **데이터를 다루기 쉽도록 movies와 ratings를 합쳐주도록 하겠습니다.**"
@@ -281,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "tutorial-bathroom",
+   "id": "metallic-influence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "graphic-treaty",
+   "id": "exclusive-evolution",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thorough-massachusetts",
+   "id": "rolled-solomon",
    "metadata": {},
    "source": [
     "- 정수로 된 user_id, movie_id, 평점(rating), 재생시간(timestamp)을 확인    \n",
@@ -483,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dramatic-helicopter",
+   "id": "impressive-adams",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "seeing-stand",
+   "id": "parallel-intervention",
    "metadata": {},
    "source": [
     "**파일이름(ratings)와 겹치지 않도록 컬럼 *rating*의 이름을 *count*로 바꿉니다.**"
@@ -514,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "contemporary-thread",
+   "id": "framed-cemetery",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "premium-recording",
+   "id": "medium-performance",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "genetic-notice",
+   "id": "superior-methodology",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collect-complex",
+   "id": "radical-register",
    "metadata": {},
    "source": [
     "**ratings 데이터로 학습한 후, 메타 데이터로 예측한 영화의 제목, 장르를 확인해 모델을 평가할 수 있을 것으로 보입니다.**\n",
@@ -610,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "owned-contents",
+   "id": "impressed-harvest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bound-tanzania",
+   "id": "blond-artist",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "discrete-spelling",
+   "id": "fancy-muscle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "processed-savings",
+   "id": "hourly-cycling",
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "purple-shelter",
+   "id": "senior-owner",
    "metadata": {},
    "source": [
     "## 02. 데이터 파헤치기 \n",
@@ -686,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "turned-relay",
+   "id": "rural-terminal",
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "normal-familiar",
+   "id": "stunning-cleaning",
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "radio-lying",
+   "id": "charming-support",
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "specific-congress",
+   "id": "competent-portland",
    "metadata": {
     "scrolled": true
    },
@@ -895,7 +896,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "published-noise",
+   "id": "abandoned-photographer",
    "metadata": {},
    "source": [
     "**id로 되어있는 영화들, 영화의 제목을 알아봅시다!**"
@@ -904,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "economic-powell",
+   "id": "identical-integral",
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rural-simple",
+   "id": "actual-kansas",
    "metadata": {},
    "source": [
     "- 순위와 함꼐 뽑기"
@@ -937,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "considerable-teach",
+   "id": "resident-elimination",
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "upper-opening",
+   "id": "inside-midnight",
    "metadata": {},
    "source": [
     "**영화와 유저에 대한 통계, 영화 재생 시간에 대한 통계를 내보겠습니다.**"
@@ -993,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "differential-petroleum",
+   "id": "invisible-treasure",
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "inclusive-transmission",
+   "id": "quantitative-check",
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "mexican-warehouse",
+   "id": "grave-airport",
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "systematic-intent",
+   "id": "developmental-civilian",
    "metadata": {},
    "source": [
     "## 02. 모델 검증을 위한 데이터 추가\n",
@@ -1180,7 +1181,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "large-marks",
+   "id": "noticed-boston",
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1358,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "scientific-biography",
+   "id": "final-print",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1373,7 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "hydraulic-auction",
+   "id": "trying-brooklyn",
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "outstanding-attribute",
+   "id": "worthy-mounting",
    "metadata": {},
    "source": [
     "- 위 방법으로 바꾸려고 했지만, id중복이 되기 때문에 빠진 값으로 바꿔준다. "
@@ -1402,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "fleet-barbados",
+   "id": "identified-gather",
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "royal-wrapping",
+   "id": "large-costume",
    "metadata": {},
    "outputs": [
     {
@@ -1625,7 +1626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "matched-italian",
+   "id": "meaningful-judgment",
    "metadata": {},
    "source": [
     "## 03. CSR matrix 만들기 "
@@ -1634,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "black-performer",
+   "id": "handled-coaching",
    "metadata": {
     "scrolled": true
    },
@@ -1663,7 +1664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attractive-belief",
+   "id": "noticed-winning",
    "metadata": {},
    "source": [
     "## 04. 모델 학습 \n",
@@ -1673,7 +1674,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "certain-comparative",
+   "id": "independent-tracy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1690,7 +1691,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "minimal-captain",
+   "id": "annoying-rubber",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,7 +1702,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "standard-sentence",
+   "id": "defensive-glasgow",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1726,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "enabling-butter",
+   "id": "measured-builder",
    "metadata": {},
    "outputs": [
     {
@@ -1750,7 +1751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "confident-german",
+   "id": "meaning-settlement",
    "metadata": {},
    "source": [
     "## 05. 선호하는 영화를 이용해 학습된 모델이 예측한 선호도를 확인하기"
@@ -1759,7 +1760,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "linear-combat",
+   "id": "simple-module",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1770,7 +1771,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "strange-greensboro",
+   "id": "modern-print",
    "metadata": {},
    "outputs": [
     {
@@ -1792,7 +1793,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "urban-verse",
+   "id": "controlling-trash",
    "metadata": {},
    "outputs": [
     {
@@ -1813,7 +1814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "american-teacher",
+   "id": "apart-brunswick",
    "metadata": {},
    "source": [
     "- 두 벡터를 곱해 1에 가까운 수가 나올 수록 학습이 잘 된 것이다."
@@ -1822,7 +1823,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "advisory-accordance",
+   "id": "outdoor-buying",
    "metadata": {
     "scrolled": true
    },
@@ -1844,7 +1845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "electronic-cemetery",
+   "id": "unusual-institution",
    "metadata": {},
    "source": [
     "- 너무 낮기 때문에, iteration, factors를 높여보겠다.\n",
@@ -1864,7 +1865,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "unlike-inside",
+   "id": "spare-boundary",
    "metadata": {},
    "outputs": [
     {
@@ -1889,7 +1890,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "linear-amino",
+   "id": "progressive-smooth",
    "metadata": {},
    "outputs": [
     {
@@ -1913,7 +1914,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "major-concentration",
+   "id": "contained-canadian",
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +1935,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "chief-stereo",
+   "id": "juvenile-score",
    "metadata": {},
    "outputs": [
     {
@@ -1956,7 +1957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "substantial-occasion",
+   "id": "assumed-scope",
    "metadata": {},
    "source": [
     "낮게 나왔다..\n",
@@ -1967,7 +1968,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "iraqi-slovak",
+   "id": "pointed-controversy",
    "metadata": {},
    "outputs": [
     {
@@ -2005,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "level-benefit",
+   "id": "closing-decimal",
    "metadata": {
     "scrolled": true
    },
@@ -2066,7 +2067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alone-champion",
+   "id": "consecutive-reynolds",
    "metadata": {},
    "source": [
     "**장르를 확인해보니 3가지만 좋아하는 영화의 장르와 같은 장르이다.**\n",
@@ -2076,7 +2077,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "lovely-colorado",
+   "id": "about-vatican",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2090,7 +2091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unknown-nelson",
+   "id": "broad-threshold",
    "metadata": {},
    "source": [
     "## 07. 내가 가장 좋아할 만한 영화들을 추천받아 봅시다.\n",
@@ -2100,7 +2101,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "unique-killer",
+   "id": "coastal-poison",
    "metadata": {},
    "outputs": [
     {
@@ -2143,7 +2144,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "caring-hammer",
+   "id": "caring-recycling",
    "metadata": {},
    "outputs": [
     {
@@ -2183,7 +2184,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "military-monaco",
+   "id": "complicated-owner",
    "metadata": {},
    "outputs": [
     {
@@ -2220,7 +2221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dental-arkansas",
+   "id": "massive-generation",
    "metadata": {},
    "source": [
     "**뮤지컬, 코미디를 제외하고 다 좋아하는 영화의 장르가 나왔다.**\n",
@@ -2230,7 +2231,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "diagnostic-spelling",
+   "id": "shared-savings",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2241,7 +2242,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "indonesian-softball",
+   "id": "spectacular-cycling",
    "metadata": {
     "scrolled": true
    },
@@ -2282,7 +2283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "electronic-benchmark",
+   "id": "billion-dubai",
    "metadata": {},
    "source": [
     "**explain에 (영화, 기여도) 가 나와있다.**"
@@ -2291,7 +2292,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "radio-patch",
+   "id": "announced-publisher",
    "metadata": {},
    "outputs": [
     {
@@ -2316,7 +2317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "focal-dodge",
+   "id": "seven-gross",
    "metadata": {},
    "source": [
     "- 가장 높은 기여도를 가진 'Flying Tigers (1942)'영화를 확인해보니, 장르가 선호하는 영화와 유사하다.\n",
@@ -2325,7 +2326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "finnish-union",
+   "id": "appreciated-fiber",
    "metadata": {},
    "source": [
     "# 정리     \n",
