--- a/[E-14]pneumonia_medical_diagnosis.ipynb
+++ b/[E-14]pneumonia_medical_diagnosis.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "differential-burton",
+   "id": "chicken-designation",
    "metadata": {},
    "source": [
     "# [Exploration 14] 폐렴 진단기 성능개선\n",
     "## 프로젝트 설명 \n",
     "---\n",
-    "DCGAN을 이용해 CIFAR-10 이미지를 생선하는 프로젝트\n",
+    "폐렴 사진 데이터를 학습시켜 정상 폐 사진과 폐렴이 있는 사진을 분류한다.\n",
     "\n",
     "\n",
     "## 프로젝트 정리     \n",
@@ -24,7 +24,7 @@
     "\n",
     "## 프로젝트 목표\n",
     "---\n",
-    "\n",
+    "- 데이터가 부족할 때 사용하는 data augmentation기법 이해\n",
     "\n",
     "\n",
     "## 01. 실험환경 set-up (하이퍼 파라미터 설정)"
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "improving-walter",
+   "id": "celtic-concert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "occasional-source",
+   "id": "million-fluid",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "destroyed-swimming",
+   "id": "romance-tribute",
    "metadata": {},
    "source": [
     "## 02. 데이터 준비하기\n",
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "beginning-custody",
+   "id": "radio-appointment",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reduced-produce",
+   "id": "separate-choice",
    "metadata": {},
    "source": [
     "**validation 데이터 갯수가 너무 없기 때문에 비율을 조정합니다.**\n",
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "ahead-median",
+   "id": "liked-indian",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "according-newfoundland",
+   "id": "alleged-summit",
    "metadata": {},
    "source": [
     "- 해당 데이터는 train, test, val 각 안에 정상, 폐렴 폴더로 라벨링이 되어있습니다.\n",
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "concrete-winner",
+   "id": "frozen-painting",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wrapped-macro",
+   "id": "opened-ivory",
    "metadata": {},
    "source": [
     "- 데이터의 불균형이 보입니다. (이는 차후에 조정하겠습니다.)\n",
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "welcome-january",
+   "id": "congressional-throw",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "satellite-islam",
+   "id": "fatal-constraint",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "peripheral-barrel",
+   "id": "flying-element",
    "metadata": {},
    "source": [
     "**데이터 갯수 확인으로 tf.data인스턴스가 잘 생성되었음을 확인했습니다.**"
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "running-crisis",
+   "id": "parental-transmission",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compliant-notebook",
+   "id": "experienced-chicago",
    "metadata": {},
    "source": [
     "- 이미지에 라벨을 붙이는 함수를 생성합니다."
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "beautiful-single",
+   "id": "adjustable-slide",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "significant-chapel",
+   "id": "assured-beatles",
    "metadata": {},
    "source": [
     "- 데이터의 사이즈를 위에서 정한 사이즈로 줄여줍니다.\n",
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "posted-tuition",
+   "id": "frank-shooting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "apart-joining",
+   "id": "earlier-warning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "becoming-bikini",
+   "id": "offensive-amount",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "advance-device",
+   "id": "pharmaceutical-isolation",
    "metadata": {},
    "source": [
     "- 라벨과 사이즈를 확인해보겠습니다."
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "better-heritage",
+   "id": "opposite-belly",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "solid-portugal",
+   "id": "systematic-trading",
    "metadata": {},
    "source": [
     "- test set에도 적용하겠습니다."
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "another-brunswick",
+   "id": "alternative-amplifier",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "infrared-mixture",
+   "id": "sorted-creativity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "commercial-probability",
+   "id": "combined-check",
    "metadata": {},
    "source": [
     "## 03. 데이터 시각화"
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "offshore-seven",
+   "id": "pointed-milan",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "asian-avenue",
+   "id": "technical-retreat",
    "metadata": {},
    "source": [
     "## 04. CNN 모델링\n",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "periodic-projection",
+   "id": "described-magic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "public-basic",
+   "id": "correct-sleeping",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "digital-whale",
+   "id": "automotive-essence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "multiple-broadcast",
+   "id": "entire-locking",
    "metadata": {},
    "source": [
     "## 05. 데이터 불균형 처리\n",
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "gentle-petite",
+   "id": "conservative-ethnic",
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sacred-fisher",
+   "id": "greatest-dairy",
    "metadata": {},
    "source": [
     "## 06. 모델 훈련"
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "moving-perth",
+   "id": "optimum-sunset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "acknowledged-editor",
+   "id": "heavy-promotion",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "correct-stuff",
+   "id": "norwegian-popularity",
    "metadata": {},
    "source": [
     "## 07. 결과확인 및 시각화"
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "stuffed-comment",
+   "id": "emerging-charter",
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "wrapped-passing",
+   "id": "intelligent-device",
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bored-organic",
+   "id": "billion-cookbook",
    "metadata": {},
    "source": [
     "## 08. 성능 개선\n",
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "paperback-crack",
+   "id": "alpine-queensland",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "powered-overview",
+   "id": "amended-bernard",
    "metadata": {},
    "source": [
     "- 실제 좌우반전이 되었는지 확인합니다."
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "linear-freeware",
+   "id": "ready-upper",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "smart-mechanics",
+   "id": "funny-henry",
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "affected-quest",
+   "id": "piano-insulation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "specialized-avatar",
+   "id": "moving-oklahoma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "figured-capitol",
+   "id": "every-times",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "internal-apple",
+   "id": "fabulous-cooperation",
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "designed-kennedy",
+   "id": "middle-thirty",
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "general-indicator",
+   "id": "reliable-worker",
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "important-thailand",
+   "id": "martial-cable",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "described-policy",
+   "id": "quantitative-leonard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "adjustable-israeli",
+   "id": "ecological-interaction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "confidential-equipment",
+   "id": "protecting-static",
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1179,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "sized-marking",
+   "id": "driving-frank",
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "important-classics",
+   "id": "measured-flesh",
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "public-heading",
+   "id": "cardiovascular-bobby",
    "metadata": {},
    "source": [
     "**batch normalization만 사용한 것이 accuracy, loss가 안정적이고 recall이 더 높게 나왔다.**"
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intensive-stadium",
+   "id": "simplified-island",
    "metadata": {},
    "source": [
     "# 루브릭 평가\n",
