--- a/[GD-10]transformer_translation.ipynb
+++ b/[GD-10]transformer_translation.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "polyphonic-irrigation",
+   "id": "distributed-difficulty",
    "metadata": {},
    "source": [
-    "# [Going Deeper NLP 10] 한영 번역기 만들기\n",
-    "attention을 기반으로 한 seq2seq모델로 한영 번역기를 생성하는 프로젝트  \n",
+    "# [Going Deeper NLP 10] 더 멋진 번역기 만들기\n",
+    "transformer 모델을 이용해 한영 번역기를 만든다.\n",
     "\n",
     "---\n",
     "\n",
     "## 프로젝트 목표\n",
     "---\n",
-    "- seq2seq 모델을 구현하며 이해한다.\n",
-    "- 기대 효과를 충족하는 모델을 구현한다.\n",
+    "- transformer 모델을 이해, 구현한다. \n",
     "\n",
     "## 프로젝트 설명\n",
     "---\n",
@@ -21,10 +20,11 @@
     "2. 데이터 정제 \n",
     "    - 중복, 결측치 제거\n",
     "    - 한글 데이터 처리\n",
+    "    - 영어 소문자 변환\n",
     "    - 토큰 추가 \n",
     "3. 데이터 토큰화 \n",
     "4. 모델 설계 \n",
-    "5. 훈련 및 attention map 시각화 \n",
+    "5. 훈련 및 평가 \n",
     "\n",
     "    \n",
     "## 0. Import module, library"
@@ -32,8 +32,121 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "careful-square",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "한글 적용 완료\n"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    " \n",
+    "%config InlineBackend.figure_format = 'retina'\n",
+    " \n",
+    "import matplotlib.font_manager as fm\n",
+    "fontpath = '/usr/share/fonts/truetype/nanum/NanumBarunGothic.ttf'\n",
+    "font = fm.FontProperties(fname=fontpath, size=9)\n",
+    "plt.rc('font', family='NanumBarunGothic') \n",
+    "mpl.font_manager._rebuild()\n",
+    "\n",
+    "print(\"한글 적용 완료\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "trying-foundation",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.1.0-rc2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import re\n",
+    "import os\n",
+    "import io\n",
+    "import time\n",
+    "import random\n",
+    "\n",
+    "import seaborn # Attention 시각화를 위해 필요!\n",
+    "\n",
+    "print(tf.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "moved-outdoors",
+   "metadata": {},
+   "source": [
+    "## 1. 데이터 정제 및 토큰화\n",
+    "- 데이터 중복 제거 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "brown-bernard",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir = os.getenv('HOME')+'/aiffel/transformer/data'\n",
+    "kor_path = data_dir+\"/korean-english-park.train.ko\"\n",
+    "eng_path = data_dir+\"/korean-english-park.train.en\"\n",
+    "\n",
+    "def clean_corpus(kor_path, eng_path):\n",
+    "    with open(kor_path, \"r\") as f: \n",
+    "        kor = f.read().splitlines()\n",
+    "    with open(eng_path, \"r\") as f: \n",
+    "        eng = f.read().splitlines()\n",
+    "    assert len(kor) == len(eng)\n",
+    "\n",
+    "    raw = zip(kor, eng)\n",
+    "    cleaned_corpus = set(raw)\n",
+    "\n",
+    "    return cleaned_corpus\n",
+    "\n",
+    "cleaned_corpus = clean_corpus(kor_path, eng_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "embedded-greeting",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78968 78968\n"
+     ]
+    }
+   ],
+   "source": [
+    "kor_corpus, eng_corpus = zip(*cleaned_corpus)\n",
+    "print(len(kor_corpus), len(eng_corpus))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "australian-recruitment",
+   "id": "given-debate",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -41,30 +154,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "marked-reset",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "compound-aging",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "tamil-pierce",
+   "id": "unnecessary-bible",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "breathing-indication",
+   "id": "inclusive-muslim",
    "metadata": {},
    "source": [
     "# 루브릭 평가\n",
@@ -87,15 +184,13 @@
     "# 회고\n",
     "---\n",
     "## 어려웠던 부분 \n",
-    "- 데이터셋 자체의 신뢰도가 낮았다. \n",
+    "- \n",
     "\n",
     "## 알아낸 점 혹은 모호한 부분 \n",
-    "- mecab으로 형태소 단위로 분해하는 것과 토큰화하는 것을 다르게 하는 것에 대해 배울 수 있었다. \n",
-    "- 데이터셋을 검증할 수 있는 방법에 대해 알아봐야겠다. 9만 여개의 데이터를 전부 확인할 수 없었다. \n",
-    "- attention 메커니즘에 대해 직접 구성할 수 있어서 좋았다. \n",
+    "- \n",
     "\n",
     "## 느낀 점 \n",
-    "- transformer로 학습시키면 더 성능이 좋을 것이라고 예상된다. 다음 프로젝트가 기대된다."
+    "- "
    ]
   }
  ],
