--- a/[GD-10]transformer_translation.ipynb
+++ b/[GD-10]transformer_translation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "distributed-difficulty",
+   "id": "engaging-psychology",
    "metadata": {},
    "source": [
     "# [Going Deeper NLP 10] 더 멋진 번역기 만들기\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "careful-square",
+   "id": "unsigned-magnet",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "trying-foundation",
+   "id": "secure-negotiation",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moved-outdoors",
+   "id": "artistic-yugoslavia",
    "metadata": {},
    "source": [
     "## 1. 데이터 정제 및 토큰화\n",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "brown-bernard",
+   "id": "fabulous-interest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "embedded-greeting",
+   "id": "young-liberty",
    "metadata": {},
    "outputs": [
     {
@@ -144,9 +144,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "remarkable-central",
+   "metadata": {},
+   "source": [
+    "- 데이터 정제\n",
+    "    1. 영문 소문자 변환\n",
+    "    2. 알파벳, 문장부호, 한글 제외는 제거\n",
+    "    3. 문장부호 양 옆에 공백 추가 \n",
+    "    4. 불필요한 공백 제거"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "swiss-vietnam",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_sentence(sentence):\n",
+    "    \n",
+    "    sentence = sentence.lower().strip()\n",
+    "\n",
+    "    sentence = re.sub(r\"([?.!,])\", r\" \\1 \", sentence)\n",
+    "    sentence = re.sub(r'[\" \"]+', \" \", sentence)\n",
+    "    sentence = re.sub(r\"[^a-zA-Z?.!가-힣ㄱ-ㅎㅏ-ㅣ]+\", \" \", sentence)\n",
+    "\n",
+    "    sentence = sentence.strip()\n",
+    "    \n",
+    "    return sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "hollywood-capital",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "korean data size: 78968\n",
+      "english data size: 78968\n",
+      "Korean: 오바마 정권인수팀 부시 행정명령 전면 재검토 중\n",
+      "English: obama team reviewing virtually every agency aide says\n"
+     ]
+    }
+   ],
+   "source": [
+    "enc_corpus = []\n",
+    "dec_corpus = []\n",
+    "\n",
+    "for kor, eng in zip(kor_corpus, eng_corpus):\n",
+    "    temp_kor = preprocess_sentence(kor)\n",
+    "    temp_eng = preprocess_sentence(eng)\n",
+    "\n",
+    "    enc_corpus.append(temp_kor)\n",
+    "    dec_corpus.append(temp_eng)\n",
+    "    \n",
+    "print('korean data size:', len(enc_corpus))\n",
+    "print('english data size:', len(dec_corpus))\n",
+    "print(\"Korean:\", enc_corpus[500])   \n",
+    "print(\"English:\", dec_corpus[500])  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "greatest-enclosure",
+   "metadata": {},
+   "source": [
+    "- 데이터 토큰화\n",
+    "    - Sentencepiece활용 "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "given-debate",
+   "id": "bound-grenada",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -154,14 +229,78 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unnecessary-bible",
+   "id": "outside-recording",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "therapeutic-integration",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "illegal-emphasis",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "iraqi-feature",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "entertaining-desperate",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "limited-sequence",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cosmetic-admission",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "liberal-dynamics",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "auburn-click",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "inclusive-muslim",
+   "id": "mobile-restriction",
    "metadata": {},
    "source": [
     "# 루브릭 평가\n",
